git sparse
----------

* Redefined Prob as TProbSpV<Real> and Factor as TFactorSpV<Real>
* [Vicenç Gomez] Added classes TProbSpV<T> and TFactorSp<T> for
  sparse factors, implemented as a vector<pair<size_t,T> >
* Added classes TProbSp<T> and TFactorSp<T> for sparse factors,
  implemented as a map<size_t,T>
* Replaced T& TProb<T>::operator[] by TProb<T>::set()
* Replaced T& TFactor<T>::operator[] by TFactor<T>::set()
* Replaced constructor
    TFactor<T>::TFactor( const VarSet& vars, TIterator begin )
  by 
    TFactor<T>::TFactor( const VarSet& vars, const T* p )

git master
----------

* Removed deprecated functionality
* Updated ChangeLog for libDAI-0.2.4 (forgot a few entries)


libDAI-0.2.4 (2010-02-11)
-------------------------

New features:
* Implemented Tree-Reweighted BP
* [Frederik Eaton] Implemented Fractional Belief Propagation

Miscellaneous improvements:
* Improved documentation
* [Frederik Eaton] Added constructors for BBPCostFunction
* [Frederik Eaton] Added accessor/mutator for the elements of a SmallSet<>
* [Frederik Eaton] Added unary minus to TProb<>
* [Frederik Eaton] Added Hellinger distance to TProb<>::DistType
* [Frederik Eaton] Two small patches for src/jtree.cpp and utils/createfg.cpp
* tests/testdai option "marginals" now has three possible values: NONE
  outputs no marginals, VAR only variable marginals, and ALL outputs all
  marginals calculated by the algorithm.
* Strengthened convergence criteria of various algorithms
* Added GraphAL, an adjacency list implementation for graphs,
  similar to (but simpler than) BipartiteGraph
* Added some functionality to create various standard factors
  (the functions whose names start with "createFactor")
* Added examples example_sprinkler_gibbs and example_sprinkler_em
* Implemented various heuristics for choosing a variable elimination sequence 
  in JTree
* Added BETHE method for GBP/HAK cluster choice
* Made alias support official part of the library

Build system: