@@ -43,3 +43,9 @@ WITH_MATLAB=
 
 # MatLab version 7.3 (R2006b) or newer?
 NEW_MATLAB=true
+
+# Enable sparse factors? (should be undefined for dense factors,
+# or 0 for sparse factors implemented using a map, or non-zero
+# for sparse factors implemented using a vector)
+# NOTE: sparse factors are experimental!
+DAI_SPARSE=1
