@@ -11,7 +11,11 @@
 #include <dai/trwbp.h>
 
 
+#ifdef DAI_SPARSE
 #define DAI_TRWBP_FAST 0
+#else
+#define DAI_TRWBP_FAST 1
+#endif
 
 
 namespace dai {
